--- a/index.html
+++ b/index.html
@@ -113,6 +113,34 @@
             </div>
         </div>
     </section>
+    <section class="gift">
+        <div class="container">
+            <img src="icons/gift.png" alt="gift" class="gift_img">
+            <div class="gift_descr">Для всех участников интенсива предусмотрены бонусы и подарки. Нажимайте на кнопку ниже, принимайте участие в вебинарах и забирайте свой приз по окончании обучения!</div>
+            <button class="gift_btn">Записаться на интенсив!</button>
+        </div>
+    </section>
+    <section class="vebinar">
+        <div class="container">
+            <img src="img/first_webinar/first.png" alt="vebinar" class="vebinar_img">
+            <div class="vebinar_title">
+                Первый вебинар состоится:
+            </div>
+            <div class="vebinar_date">10 сентября в 20:00 по Москве</div>
+            <div class="vebinar_descr">Успейте записаться, количество мест ограничено!</div>
+        </div>
+    </section>
+    <section class="footer">
+        <div class="footer_wrapper">
+            <a href="#" class="footer_link">Служба поддержки</a>
+            <div class="footer_divider"></div>
+            <a href="#" class="footer_link">Политика конфиденциальности</a>
+        </div>
+        <div class="footer_tel">Позвоните нам 8-800-555-01-21</div>
+
+        <div class="footer_divider_r"></div>
+    </section>
+
     
 </body>
 </html>
