--- a/index.html
+++ b/index.html
@@ -57,6 +57,91 @@
         </div>
     </section>
 
+    <section class="optimization">
+        <div class="container">
+            <h2 class="optimization_header">
+                Что такое оптимизация и зачем она нужна?
+            </h2>
+            <div class="optimization_text">
+                На просторах интернета несчетное количество действующих и даже заброшенных сайтов. Большинство из них совпадает не только по категориям, но и по содержанию.<br><br> 
+
+                Представьте себе тысячи сайтов, на которых тем или иным образом предоставляется одна и та же информация или продается одна и та же услуга. И попасть на эти сайты можно лишь по тематическим запросам в поисковых системах.<br><br> 
+                Но как вам быть, если ваш сайт похож на сотню или тысячу таких же, а на одной странице гугла или яндекса всего 10 позиций? Как привести посетителей страницы своего ресурса? Именно для этого и нужна оптимизация – для вывода вашего сайта на первую страницу поиска! <br><br>
+                <span>Мы научим вас, как сделать ваш сайт привлекательным для поисковых систем и посоветуем, как вывести его на первые страницы, обходя всех конкурентов.
+                </span>
+            </div>
+            <img src="img/bg/woman_bg.jpg" alt="woman" class="optimization_img">
+        </div>
+    </section>
+
+    <section class="finish">
+        <div class="container">
+            <h2 class="finish_header">По окончании обучения Вы сможете!</h2>
+            <div class="finish_divider"></div>
+
+            <div class="finish_wrapper">
+                <div class="finish_item">
+                    <div class="finish_round">
+                        <img src="icons/finish/1.png" alt="1" class="finish_icon">
+                    </div>
+                    <div class="finish_descr">Создать свой сайт или блог</div>
+                </div>
+                <div class="finish_item">
+                    <div class="finish_round">
+                        <img src="icons/finish/2.png" alt="2" class="finish_icon">
+                    </div>
+                    <div class="finish_descr">Правильно его оптимизировать</div>
+                </div>
+                <div class="finish_item">
+                    <div class="finish_round">
+                        <img src="icons/finish/3.png" alt="3" class="finish_icon">
+                    </div>
+                    <div class="finish_descr">Обеспечить ему медлен-
+                        ный, но верный рост в 
+                        ТОП</div>
+                </div>
+                <div class="finish_item">
+                    <div class="finish_round">
+                        <img src="icons/finish/4.png" alt="4" class="finish_icon">
+                    </div>
+                    <div class="finish_descr">Достигнуть стабильного прироста посетителей</div>
+                </div>
+                <div class="finish_item">
+                    <div class="finish_round">
+                        <img src="icons/finish/5.png" alt="5" class="finish_icon">
+                    </div>
+                    <div class="finish_descr">Получать ощутимую прибыль</div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="gift">
+        <div class="container">
+            <img src="icons/gift.png" alt="gift" class="gift_img">
+            <div class="gift_descr">Для всех участников интенсива предусмотрены бонусы и подарки. Нажимайте на кнопку ниже, принимайте участие в вебинарах и забирайте свой приз по окончании обучения!</div>
+            <button class="gift_btn">Записаться на интенсив!</button>
+        </div>
+    </section>
+
+    <section class="vebinar">
+        <div class="container">
+            <img src="img/first_webinar/first.png" alt="vebinar" class="vebinar_img">
+            <div class="vebinar_title">Первый вебинар состоится:</div>
+            <div class="vebinar_date">10 сентября в 20:00 по Москве</div>
+            <div class="vebinar_descr">Успейте записаться, количество мест ограничено!</div>
+        </div>
+    </section>
+
+    <section class="footer">
+        <div class="footer_wrapper">
+            <a href="" class="footer_link">Служба поддержки</a>
+            <div class="footer_divider"></div>
+            <a href="" class="footer_link">Политика конфиденциальности</a>
+        </div>
+        <div class="footer_tel">Позвоните нам 8-800-555-01-21</div>
+    </section>
+
     
 </body>
 </html>
